search input edited

--- a/web1-120/index.html
+++ b/web1-120/index.html
@@ -30,7 +30,7 @@
         <section class="main-header">
             <h1>کالترین، <span>کتابخانه آنلاین...</span></h1>
             <h1>با ما کتاب بخوانید!</h1>
-            <div class="search-books-writers"></div>
+            <input class="search-books-writers" type="text" name="search" id="" placeholder="جستوجوی کتاب">
         </section>
         <!-- main header done! -->
     </header>
