--- a/web1-120/index.html
+++ b/web1-120/index.html
@@ -62,11 +62,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
@@ -81,11 +81,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
@@ -100,11 +100,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
@@ -119,11 +119,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
@@ -138,11 +138,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
@@ -157,11 +157,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
@@ -176,11 +176,11 @@
                     <div class="button-save">
                         <a href="#" class="reade-more">اطلاعات بیشتر</a>
                         <p class="star">
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
-                            <strong>&star;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
+                            <strong>&starf;</strong>
                         </p>
                     </div>
                 </div>
